fixed sonar issues and tests